--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -9,8 +9,15 @@
 <body>
     <h1>Lista de Filmes</h1>
     <hr>
-    {% for usuario in usuarios %}
-    <p>{{usuario[0]}}</p>
+    {% for filme in filmes %}
+    <p>{{filme[0]}}</p>
+    <p>{{filme[1]}}</p>
+    <p>{{filme[2]}}</p>
+    <p>{{filme[3]}}</p>
+    <p>{{filme[4]}}</p>
+    <p>{{filme[5]}}</p>
+    <p>{{filme[6]}}</p>
     {% endfor %}
+
 </body>
 </html>
