--- a/templates/filme.html
+++ b/templates/filme.html
@@ -15,9 +15,14 @@
         <a>descrição</a>
         <a>trailer</a>
         <a>sessoes</a>
-        {% if temSessao %}
-            <button>{{nomeSessao}}</button>
-        {% endif %} 
+        <br>
+        <button>Segunda-feira</button>
+        <button>Terça-feira</button>
+        <button>Quarta-feira</button>
+        <button>Quinta-feira</button>
+        <button>Sábado</button>
+        <br>
+        <iframe src="/versessoes" frameborder="1" height="100%" width="500px"></iframe>
     </div>
     <br>
     <a href="/">Voltar</a>
