--- a/templates/lanchonete.html
+++ b/templates/lanchonete.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-</head>
-<body>
-    
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>IFilmes</title>
+    <link rel="stylesheet" href="../static/paginaInicial.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="barra">
+      <a href="/">
+        <img src="../static/imagens/mdd.png" width="170" height="70"
+      /></a>
+      <form action="/buscarFilme">
+        <input type="text" placeholder="Pesquisar filme ..." />
+        <button type="submit">Buscar</button>
+      </form>
+      <a href="/"> Home</a>
+      <a href="/cinema"> Cinema</a>
+      <a href="/lanchonete"> Lanchonete</a>
+      <a href="/login"> Conta</a>
+
+      <br />
+    </div>
 </body>
 </html>
