--- a/templates/paginaInicial.html
+++ b/templates/paginaInicial.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <title>IFilmes</title>
     <link rel="stylesheet" href="../static/paginaInicial.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header>
     <div class="barra">
       <a href="/">
         <img src="../static/imagens/mdd.png" width="170" height="70"
@@ -17,7 +18,6 @@
 
       <form action="/buscarFilme">
         <input type="text" placeholder="Pesquisar filme ..." />
-        <button type="submit">Buscar</button>
       </form>
       <a href="/"> Home</a>
       <a href="/cinema"> Cinema</a>
@@ -26,8 +26,9 @@
 
       <br />
     </div>
+  </header>
     <br />
-
+  <div class="cabecalho">
     <p>
       Este projeto foi desenvolvido como parte da disciplina de Desenvolvimento
       Web, com o objetivo de criar uma plataforma prática e funcional para a
@@ -38,6 +39,7 @@
       experiência acessível tanto para os gestores quanto para o público que
       frequenta o cinema.
     </p>
+    </div>
 
     <div class="filmes">
       <div class="filme">
