--- a/static/paginaInicial.css
+++ b/static/paginaInicial.css
@@ -1,6 +1,6 @@
-html, body {
-    height: 100%; 
-    
+header{
+    width: 100%;
+
 }
 
 
@@ -128,4 +128,12 @@ a{
     align-items: center;
     font-decoration: none;
    
+}
+
+.cabecalho{
+    font-family: "Lexend", sans-serif;
+    text-align: left;
+    padding-left: 25%;
+    padding-right: 25%;
+    
 }
