--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,8 +3,13 @@
   <head>
     <title>IFilmes</title>
     <link rel="stylesheet" href="../static/cadastro.css" />
+    <link rel="icon" type="image/png" href="../static/imagens/md.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
   </head>
