--- a/static/cinema.css
+++ b/static/cinema.css
@@ -30,7 +30,6 @@ body {
 input::placeholder{
     color: whitesmoke;
     opacity: 1;
-    
 
 } 
 
@@ -49,46 +48,15 @@ input::placeholder{
 
 .barra a{
     margin: 1px;
-     cursor: pointer;
-    transition: transform 0.2s ease;
-   
 }
 
-
-
-a:hover{
-    transform: scale(1.08);
-}
-
-
-
-.filmes {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 5px;
-    flex-wrap: wrap;
-    text-align: center;
-    width: 100%;
-
-}
-
-.filme {
-    margin: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 255px;
-    margin-top: 70px;
-    font-size: 30px;
-}
 
 
 input{
     border: 2px solid whitesmoke;
     border-radius: 10px;
     margin-bottom: 5px;
-    background-color: #921a0f ;
+    background-color: #921a0f;
     color: whitesmoke;
     height: 30px;
     width: 200px;
@@ -99,63 +67,59 @@ input{
 
 }
 
-button{
-    border: none;
-    border-radius: 13px;
-    height: 30px;
-    width: 100%;
-    color:whitesmoke;
-    background-color: #921a0f ;
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 15px;
-}
+
 
 a{
     color: whitesmoke;
     text-align: center;
     margin-top: 10px;
     text-decoration: none;
+     cursor: pointer;
+    transition: transform 0.2s ease;
+ }
 
 
+
+a:hover {
+    transform: scale(1.08);
 }
 
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
 
-}
 
-.rodape{
-    display: flex;
-    margin-top: auto;
-    border: none;
-    background-color: #921a0f ;
-    width: 100%;
-    height: 100px;
-    font-size: 15px;
-    justify-content: center;
-    align-items: center;
+.lista p{
     font-family: "Lexend", sans-serif;
+    text-align: left;
+    padding-left: 35%;
+    padding-right: 35%;
     
+    
+
+    
+}
+
+.lista img{
+    display: block;
+    margin: 0 auto; 
+    padding-top: 40px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
    
 }
 
-.cabecalho{
-    font-family: "Lexend", sans-serif;
-    text-align: left;
-    padding-left: 25%;
-    padding-right: 25%;
-    
-}
-
-img{
-  cursor: pointer;
-    transition: transform 0.2s ease;
-}
 
 
 img:hover {
     transform: scale(1.03);
+}
+
+h1{
+     text-align: center;
+     font-size: 50px;
+}
+ 
+h2{
+    text-align: center;
+    font-family: "Lexend", sans-serif;
+    font-weight: bolder;
+    
 }
