--- a/static/login.css
+++ b/static/login.css
@@ -3,13 +3,12 @@ body{
   height: 100vh;
   background: linear-gradient(to bottom, #131313, #1a1a1a, #2a2a2a);
     color: ghostwhite;
-    margin-left: 45%;
-    margin-right: 45%;
-
+    margin-left: 40%;
+    margin-right: 40%;
     align-items: center;
     font-family: impact,fantasy;
     font-family: 'Bebas Neue', sans-serif;
-
+   
 
 
 
@@ -18,13 +17,14 @@ body{
 
 
 h1{
-    margin-bottom: 10%;
+    margin-bottom: 15%;
     align-items: center;
     font-size: 70px;
     text-align: center;
     margin-top: 10px;
     font-weight: bold;
     letter-spacing: 3px;
+    
 
 
 
@@ -36,12 +36,29 @@ h1{
     background-color:  #2c2c2c;
     border: 1px solid #2c2c2c;
     box-sizing: border-box;
-    width: 500px;
+    width: 800px;
+    margin-top: 30px;
     padding: 20%;
     background-color: #2c2c2c;
     text-align: center;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.8);
+    height: 440px;
 
+
+}
+
+select{
+    border: 2px solid whitesmoke;
+    background-color: #2c2c2c;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    color: whitesmoke;
+    height: 40px;
+    width: 100%;
+    font-family: "Lexend", sans-serif;
+    text-align: center;
+    font-size: 13px;
+    text-align: left;
 
 }
 
@@ -50,56 +67,52 @@ form{
     justify-content: center;
 }
 
-input{
-    border: none;
-    border-radius: 13px;
-    margin-bottom: 5px;
-    color: #921a0f;
-    height: 30px;
-    width: 200px;
-    font-family: 'Bebas Neue', sans-serif;
-    text-align: center;
-    font-size: 15px;
-
-
+input::placeholder {
+  color: whitesmoke;     
+  opacity: 1;       
 }
 
-input[type='checkbox']{
-   width: 30px;
-    border: #921a0f 1px solid;
-    border-radius: 9px;
-    appearance: none;
-    display: flex;
-    cursor: pointer;
-    transition: 0.2s;
-    display: block;         
-    margin: 10px auto;      
- 
+input{
+    border: 2px solid whitesmoke;
+    background-color: #2c2c2c;
+    border-radius: 10px;
+    margin-bottom: 4px;
+    height: 32px;
+    width: 200px;
+    font-family: "Lexend", sans-serif;
+    text-align: left;
+    font-size: 13px;
+    padding-bottom: 5px;
     
 }
 
 
+
+
 button{
+    margin-top: 3px;
     border: none;
-    border-radius: 13px;
-    height: 30px;
+    border-radius: 10px;
+    height: 32px;
     width: 100%;
     color:whitesmoke;
-    background-color: #921a0f ;
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 15px;
-
-
-
-
-
+    background-color:#921a0f ;
+    font-family: "Lexend", sans-serif;
+    font-size: 13px;
+    text-align: center;
+    cursor: pointer;
 }
 
+
+
 a{
+    margin-top: 3px;
     color: whitesmoke;
     text-align: center;
     margin-top: 10px;
     text-decoration: none;
+    font-family: "Lexend", sans-serif;
+    font-size: 13px;
 }
 
 .container{
@@ -109,3 +122,4 @@ a{
     height: 80vh;
 
 }
+
