--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -3,42 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <title>IFilmes</title>
-    <link rel="stylesheet" href="../static/paginaInicial.css" />
+    <link rel="icon" type="image/png" href="../static/imagens/md.png">
+
+    <link rel="stylesheet" href="../static/cinema.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=face" />
   </head>
   <body>
-    <div class="barra">
-      <a href="/">
-        <img src="../static/imagens/mdd.png" width="170" height="70"
-      /></a>
-      <form action="/buscarFilme">
-        <input type="text" placeholder="Pesquisar filme ..." />
-        <button type="submit">Buscar</button>
-      </form>
-      <a href="/"> Home</a>
-      <a href="/cinema"> Cinema</a>
-      <a href="/lanchonete"> Lanchonete</a>
-      <a href="/login"> Conta</a>
-      <br />
-    </div>
+    <header>
+      <div class="barra">
+        <a href="/">
+          <img src="../static/imagens/mdd.png" width="170" height="70" />
+        </a>
 
-    <div>
+        <form action="/buscarFilme">
+          <input type="text" placeholder="Pesquisar filme ..." />
+        </form>
+        <a href="/"> Home</a>
+        <a href="/cinema"> Cinema</a>
+        <a href="/lanchonete"> Lanchonete</a>
+        <a href="/login"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" width="48px" fill="#e3e3e3"><g><rect fill="none" height="20" width="20"/></g><g><g><path d="M10 2c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 3.5c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 11c-2.05 0-3.87-.95-5.07-2.44 1.45-.98 3.19-1.56 5.07-1.56s3.62.58 5.07 1.56c-1.2 1.49-3.02 2.44-5.07 2.44z"/></g></g></svg></a>
+
+        <br />
+      </div>
+
+    <div class="lista">
       <h1>Lista de Filmes</h1>
       <hr />
       <br>
       {% for filme in filmes %}
-      <img src="../static/imagens/{{filme[0]}}" alt="" width="455" height="579">
+         <a href="{{ filme[3] }}" target="_blank">
+    <img src="../static/imagens/{{ filme[0] }}" width="455" height="579" />
+        </a>
       <h2>{{filme[1]}}</h2>
       <p>{{filme[2]}}</p>
-      <p>{{filme[3]}}</p>
       <p>{{filme[4]}}</p>
       <p>{{filme[5]}}</p>
       <p>{{filme[6]}}</p>
       <p>{{filme[7]}}</p>
+      
+      <br>
+      <br>
       {% endfor %}
     </div>
+    
   </body>
 </html>
