--- a/templates/paginaAdm.html
+++ b/templates/paginaAdm.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="../static/imagens/md.png">
   <link 
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" 
     rel="stylesheet"
