--- a/templates/paginaInicial.html
+++ b/templates/paginaInicial.html
@@ -3,17 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>IFilmes</title>
+    <link rel="icon" type="image/png" href="../static/imagens/md.png">
+
     <link rel="stylesheet" href="../static/paginaInicial.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=face" />
   </head>
   <body>
     <header>
@@ -28,7 +35,7 @@
         <a href="/"> Home</a>
         <a href="/cinema"> Cinema</a>
         <a href="/lanchonete"> Lanchonete</a>
-        <a href="/login"> Conta</a>
+        <a href="/login"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" width="48px" fill="#e3e3e3"><g><rect fill="none" height="20" width="20"/></g><g><g><path d="M10 2c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 3.5c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 11c-2.05 0-3.87-.95-5.07-2.44 1.45-.98 3.19-1.56 5.07-1.56s3.62.58 5.07 1.56c-1.2 1.49-3.02 2.44-5.07 2.44z"/></g></g></svg></a>
 
         <br />
       </div>
