--- a/templates/login.html
+++ b/templates/login.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
-   <head>
-    <link rel="icon" type="image/png" href="../static/imagens/md.png">
-       <title>IFilmes</title>
-     <link rel="stylesheet" href="../static/login.css">
-     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-       <link
-      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+  <head>
+      <link rel="icon" type="image/png" href="../static/imagens/md.png">
+        <title>IFilmes</title>
+      <link rel="stylesheet" href="../static/login.css">
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link
+        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+        rel="stylesheet"
+      />
 
-   </head>
-   <body>
+  </head>
+  <body>
        
-       <div class="container">
-           <div class = "dados">
-              
-                <h1>Login</h1>
-               <form action="/logar" method="post">
-                
-                    <select id="tipo" name="tipoUsuario">
-                     <option value="" disabled selected>Selecione</option>
-                     <option value="cliente">Usuário</option>
-                     <option value="adm">Administrador</option>
-                    </select>
-                  <input type="text" name="emailUsuario" placeholder="  Digite seu e-mail">
-                  <input type="password" name="senhaUsuario" placeholder="  Digite sua senha">
-        
-                  <button type="submit">Enviar</button>
-              </form>
-               <a href="/cadastro">Fazer Cadastro</a>
-               <br>
-               <a href="/">Voltar</a>
-               <p>{{msg}}</p>
-               <br>
-           </div>
-       </div>
-   </body>
+    <div class="container">
+      <div class = "dados">
+        <h1>Login</h1>
+          <form action="/logar" method="post">
+          
+            <select id="tipo" name="admtrue">
+              <option value="" disabled selected>Selecione</option>
+              <option value="usuario">Usuário</option>
+              <option value="adm">Administrador</option>
+            </select>
+            <input type="text" name="emailUsuario" placeholder="  Digite seu e-mail">
+            <input type="password" name="senhaUsuario" placeholder="  Digite sua senha">
+
+            <button type="submit">Enviar</button>
+        </form>
+          <a href="/cadastro">Fazer Cadastro</a>
+          <br>
+          <a href="/">Voltar</a>
+          <br>
+          <div class="mensagem">
+          <a>{{msg}}</a>
+        </div>
+          <br>
+      </div>
+    </div>
+  </body>
 </html>
