--- a/static/filme.css
+++ b/static/filme.css
@@ -1,6 +1,3 @@
-header{
-    width: 100%;
-}
 
 
 
@@ -8,32 +5,24 @@ body {
     background-color: #131313;
     color: ghostwhite;
     font-family: 'Bebas Neue', sans-serif;
-    display: flex;
     flex-direction: column;
-    justify-content: auto;
-     text-align: left;
-    padding-left: 35%;
-    padding-right: 35%;
-    
+    display: flex;              
+    align-items: flex-start;    
+    gap: 50px;                
+    padding-left: 5%;
 }
 
 
 
 a{
     color: whitesmoke;
-    text-align: center;
     margin-top: 10px;
     text-decoration: none;
     font-weight: bold; 
     padding-bottom: 20px;
     font-family: "Lexend", sans-serif;
     font-size: 15px;
-}
-
-.sess{
-    text-align: center;
-    justify-content: center;
-    display: flex;
+    
     
 }
 
@@ -44,6 +33,9 @@ img {
     padding-top: 40px;
     cursor: pointer;
     transition: transform 0.2s ease;
+    padding-right: 70%;
+    
+
 }
 
 
